src/objects/CustomLink__c.object
<CustomObject>
    <description>SFDC1-5622 to Store the Custom Links, easily find things like clicktools, forms or user request forms.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-5622 To check the URL is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomLinkName__c</fullName>
        <description>SFDC1-5622 Custom Link Name</description>
        <inlineHelpText>Please Enter Name of the Custom Link</inlineHelpText>
        <label>Custom Link Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>SFDC1-5622 - Custom Link&apos;s URL</description>
        <inlineHelpText>Please Enter the URL</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Custom Link</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Custom Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>